// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Standard field metadata update should succeed when setting isActive to false 1`] = `
{
  "description": "Opportunity stage",
  "icon": "IconProgressCheck",
  "id": Any<String>,
  "isActive": false,
  "isCustom": false,
  "label": "Stage",
  "name": "stage",
  "standardOverrides": {
    "description": "Opportunity stage",
    "icon": "IconProgressCheck",
    "label": "Deal Stage",
  },
}
`;

exports[`Standard field metadata update should succeed when updating defaultValue 1`] = `
{
  "description": "Opportunity stage",
  "icon": "IconProgressCheck",
  "id": Any<String>,
  "isActive": true,
  "isCustom": false,
  "label": "Stage",
  "name": "stage",
  "standardOverrides": {
    "description": "Opportunity stage",
    "icon": "IconProgressCheck",
    "label": "Deal Stage",
  },
}
`;

exports[`Standard field metadata update should succeed when updating description 1`] = `
{
  "description": "Opportunity stage",
  "icon": "IconProgressCheck",
  "id": Any<String>,
  "isActive": true,
  "isCustom": false,
  "label": "Stage",
  "name": "stage",
  "standardOverrides": {
    "description": "Updated test description for company name field",
    "icon": "IconProgressCheck",
    "label": "Deal Stage",
  },
}
`;

exports[`Standard field metadata update should succeed when updating icon 1`] = `
{
  "description": "Opportunity stage",
  "icon": "IconProgressCheck",
  "id": Any<String>,
  "isActive": true,
  "isCustom": false,
  "label": "Stage",
  "name": "stage",
  "standardOverrides": {
    "description": "Opportunity stage",
    "icon": "IconBuildingFactory",
    "label": "Deal Stage",
  },
}
`;

exports[`Standard field metadata update should succeed when updating label 1`] = `
{
  "description": "Opportunity stage",
  "icon": "IconProgressCheck",
  "id": Any<String>,
  "isActive": true,
  "isCustom": false,
  "label": "Stage",
  "name": "stage",
  "standardOverrides": {
    "description": "Opportunity stage",
    "icon": "IconProgressCheck",
    "label": "Business Name",
  },
}
`;

exports[`Standard field metadata update should succeed when updating options 1`] = `
{
  "description": "Opportunity stage",
  "icon": "IconProgressCheck",
  "id": Any<String>,
  "isActive": true,
  "isCustom": false,
  "label": "Stage",
  "name": "stage",
  "standardOverrides": {
    "description": "Opportunity stage",
    "icon": "IconProgressCheck",
    "label": "Deal Stage",
  },
}
`;
